able to create podcast folder, add podcasts to it
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@14624 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
+++ b/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
@@ -6,6 +6,7 @@ podcast_no_podcasts=There are currently no podcasts at this location.
 podcast_add=Add
 podcast_options=Options
 podcast_permissions=Permissions
+podcast_download=Download
 
 podcast_required_prompt=Required items marked with a 
 podcast_file_prompt=Choose a file:
