will display contents if podcasts folder has files (not pretty, but displays), cleaned up message names
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@14626 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
+++ b/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
@@ -1,46 +1,49 @@
 podcast_home_title=Podcasts
 podcast_home_sub=Subcribe now by copying this address and pasting it into your favorite
-podcast_home_podcatcher=podcatcher
-podcast_no_podcasts=There are currently no podcasts at this location.
+podcatcher=podcatcher
 
-podcast_add=Add
-podcast_options=Options
-podcast_permissions=Permissions
-podcast_download=Download
+no_podcasts=There are currently no podcasts at this location.
 
-podcast_required_prompt=Required items marked with a 
-podcast_file_prompt=Choose a file:
-podcast_date_prompt=Date
-podcast_title_prompt=Title
-podcast_cancel=Cancel
-podcast_access=Access
-podcast_change_submit=Save Changes
+access=Access
+add=Add
+cancel=Cancel
+delete=Delete
+download=Download
+maint=Maintain
+new=New
+options=Options
+permissions=Permissions
+read=Read
+revise=Revise
+role=Role
 
-podcast_add_title=Add Podcast
-podcast_add_directions=Complete the form, then choose the appropriate button at the bottom.
-podcast_add_description_prompt=Description
-podcast_add_email_prompt=Email Notification
+popup_text=A podcatcher is a computer program used to automatically download podcasts.  iTunes is a popular podcatcher, but is not the only software available for this purpose.
 
-podcast_delete_title=Deleting Podcast...
-podcast_delete_submit=Delete
+required_prompt=Required items marked with a 
+file_prompt=Choose a file:
+date_prompt=Date
+title_prompt=Title
+change_submit=Save Changes
 
-podcast_revise_title=Reivse Podcast
-podcast_revise_directions=Update the form, then choose the appropriate botton at the bottom.
+add_title=Add Podcast
+add_directions=Complete the form, then choose the appropriate button at the bottom.
 
-podcast_perm_title=Permissions
-podcast_perm_directions=Set permissions for Podcasts in worksite
+description_prompt=Description
+email_prompt=Email Notification
 
-podcast_perm_role=Role
-podcast_perm_new=New
-podcast_perm_read=Read
-podcast_perm_revise=Revise
-podcast_perm_delete=Delete
-podcast_perm_maint=Maintain
+delete_title=Deleting Podcast...
+delete_submit=Delete
 
-podcast_options_title=Options
-podcast_options_directions1=To provide access to you podcasts through a
-podcast_options_directions2=choose Display to Public. To restrict access to your podcasts to your site's participants and disable access through a
-podcast_options_directions3=choose Display to Site.
+revise_title=Reivse Podcast
+revise_directions=Update the form, then choose the appropriate botton at the bottom.
+
+perm_title=Permissions
+perm_directions=Set permissions for Podcasts in worksite
+
+options_title=Options
+options_directions1=To provide access to you podcasts through a
+options_directions2=choose Display to Public. To restrict access to your podcasts to your site's participants and disable access through a
+options_directions3=choose Display to Site.
 
 podcast_options_public=Display to Public
 podcast_options_site=Display to Site
