podcasts information formatted, still need to pull correct info, clean up formatting
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@14627 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
+++ b/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
@@ -4,13 +4,17 @@ podcatcher=podcatcher
 
 no_podcasts=There are currently no podcasts at this location.
 
+posted_by=Posted by 
+
 access=Access
 add=Add
+at=at
 cancel=Cancel
 delete=Delete
 download=Download
 maint=Maintain
 new=New
+on=on
 options=Options
 permissions=Permissions
 read=Read
