cleaned up presentation of main page, renamed jsps, created 1st version of podDelete.jsp
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@14628 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
+++ b/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
@@ -8,13 +8,13 @@ posted_by=Posted by
 
 access=Access
 add=Add
-at=at
+at=at 
 cancel=Cancel
 delete=Delete
 download=Download
 maint=Maintain
 new=New
-on=on
+on=on 
 options=Options
 permissions=Permissions
 read=Read
@@ -28,6 +28,7 @@ file_prompt=Choose a file:
 date_prompt=Date
 title_prompt=Title
 change_submit=Save Changes
+del_confirm=Are you sure you want to delete the following podcast?
 
 add_title=Add Podcast
 add_directions=Complete the form, then choose the appropriate button at the bottom.
@@ -62,4 +63,3 @@ podcast_nodate_alert=Alert: You must enter a date
 podcast_notitle_alert=Alert: You must enter a title
 podcast_length_alert=Alert: The podcast URL, including the file name, cannot exceed 254 characters. To add this podcast successfully, reduce the length of the file name and try again.
 podcast_quota_alert=Alert: You have exceeded your quota in Resources.  Delete items and try again.
-podcast_del_confirm=Are you sure you want to delete the following podcast?
