worked on podcasts, Comparator created to sort
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@14630 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
+++ b/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
@@ -23,6 +23,9 @@ role=Role
 
 popup_text=A podcatcher is a computer program used to automatically download podcasts.  iTunes is a popular podcatcher, but is not the only software available for this purpose.
 
+current_file=Current File:
+current_date=Current Date:
+
 required_prompt=Required items marked with a 
 file_prompt=Choose a file:
 date_prompt=Date
