fixed display of student main page
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@14643 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
+++ b/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
@@ -10,6 +10,7 @@ access=Access
 add=Add
 at=at 
 cancel=Cancel
+close_paren=)
 delete=Delete
 download=Download
 maint=Maintain
@@ -20,6 +21,7 @@ permissions=Permissions
 read=Read
 revise=Revise
 role=Role
+spacer_bar= | 
 
 popup_text=A podcatcher is a computer program used to automatically download podcasts.  iTunes is a popular podcatcher, but is not the only software available for this purpose.
 
