redid error messages to Add and main page
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@14644 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
+++ b/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
@@ -10,7 +10,6 @@ access=Access
 add=Add
 at=at 
 cancel=Cancel
-close_paren=)
 delete=Delete
 download=Download
 maint=Maintain
@@ -21,6 +20,9 @@ permissions=Permissions
 read=Read
 revise=Revise
 role=Role
+
+close_paren=)
+open_paren=(
 spacer_bar= | 
 
 popup_text=A podcatcher is a computer program used to automatically download podcasts.  iTunes is a popular podcatcher, but is not the only software available for this purpose.
@@ -63,8 +65,8 @@ podcast_perm_change_confirm=Alert: The properties for the Podcasts folder in Res
 podcast_perm_change_pt2=For participants to access the Podcast feed for this site, in Resources, select Revise Properties next to the Podcasts folder 
 podcast_perm_change_pt3= and check the box next to Display to non-members (publicly viewable).
 
-podcast_nofile_alert=Alert: You must choose a file
-podcast_nodate_alert=Alert: You must enter a date
-podcast_notitle_alert=Alert: You must enter a title
+nofile_alert=Alert: You must choose a file
+nodate_alert=Alert: You must enter a date
+notitle_alert=Alert: You must enter a title
 podcast_length_alert=Alert: The podcast URL, including the file name, cannot exceed 254 characters. To add this podcast successfully, reduce the length of the file name and try again.
 podcast_quota_alert=Alert: You have exceeded your quota in Resources.  Delete items and try again.
