Initial implementation of error messages, pulling error messages from bundle, cosmetic changes to Options, Revise pages
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@14646 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
+++ b/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
@@ -57,16 +57,23 @@ options_directions1=To provide access to you podcasts through a
 options_directions2=choose Display to Public. To restrict access to your podcasts to your site's participants and disable access through a
 options_directions3=choose Display to Site.
 
-podcast_options_public=Display to Public
-podcast_options_site=Display to Site
+podcast_options_public=Display to non-members (publicly viewable)
+podcast_options_site=Display to site
 
-podcast_no_resource=Alert: To use the Podcasts tool, you must first add the Resources tool.
-podcast_perm_change_confirm=Alert: The properties for the Podcasts folder in Resources have been changed.  This folder is no longer publicly viewable.
+perm_change_confirm=The properties for the Podcasts folder in Resources have been changed.  This folder is no longer publicly viewable.
+
 podcast_perm_change_pt2=For participants to access the Podcast feed for this site, in Resources, select Revise Properties next to the Podcasts folder 
 podcast_perm_change_pt3= and check the box next to Display to non-members (publicly viewable).
 
+no_resource_alert=To use the Podcasts tool, you must first add the Resources tool.
 nofile_alert=Alert: You must choose a file
 nodate_alert=Alert: You must enter a date
 notitle_alert=Alert: You must enter a title
-podcast_length_alert=Alert: The podcast URL, including the file name, cannot exceed 254 characters. To add this podcast successfully, reduce the length of the file name and try again.
-podcast_quota_alert=Alert: You have exceeded your quota in Resources.  Delete items and try again.
+length_alert=The podcast URL, including the file name, cannot exceed 254 characters. To add this podcast successfully, reduce the length of the file name and try again.
+quota_alert=You have exceeded your quota in Resources.  Delete items and try again.
+permission_alert=You do not have permission to delete the selected file.
+internal_error_alert=An internal error prevented the podcast from being deleted. Please try again.
+id_unused_alert=The ID for the resource does not correspond to a valid resource. Please try again and if this reoccurs, contact support to help resolve.
+id_invalid_alert=The ID for the resource is invalid resource. Please try again and if reoccurs, contact support to help resolve.
+io_alert=There was a problem uploading your file. Please check the pathname or re-select and try again.
+id_used_alert=The ID for the resource is already in use. Please retry.
