added page to revise podfeed, tied it to podMain, other cosmetic changes
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@14654 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
+++ b/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
@@ -32,8 +32,8 @@ current_file=Current File:
 current_date=Current Date:
 
 required_prompt=Required items marked with a 
-file_prompt=Choose a file:
-date_prompt=Date
+file_prompt=Choose a file
+date_prompt=Date and Time Created
 title_prompt=Title
 change_submit=Save Changes
 del_confirm=Are you sure you want to delete the following podcast?
@@ -78,3 +78,7 @@ id_unused_alert=The ID for the resource does not correspond to a valid resource.
 id_invalid_alert=The ID for the resource is invalid resource. Please try again and if reoccurs, contact support to help resolve.
 io_alert=There was a problem uploading your file. Please check the pathname or re-select and try again.
 id_used_alert=The ID for the resource is already in use. Please retry.
+
+podfeed_revise_title=Revise Podcast Feed
+podfeed_revise_directions=The title and description of the podcast feed will be available to site participants from within their podcatcher.  Update the form, then choose the appropriate button at the bottom. 
+podfeed_revise_url_caption=RSS feed address
