add global feed info revise page
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@14655 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
+++ b/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
@@ -82,3 +82,6 @@ id_used_alert=The ID for the resource is already in use. Please retry.
 podfeed_revise_title=Revise Podcast Feed
 podfeed_revise_directions=The title and description of the podcast feed will be available to site participants from within their podcatcher.  Update the form, then choose the appropriate button at the bottom. 
 podfeed_revise_url_caption=RSS feed address
+podfeed_global_title=Podcast for
+podfeed_global_desc1=This is the podcast for the course
+podfeed_global_desc2=. Please subscribe by entering the URL above into your podcatcher. 
