date/time picker v1, other cosmetic changes
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@14663 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
+++ b/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
@@ -28,12 +28,12 @@ spacer_bar= |
 
 popup_text=A podcatcher is a computer program used to automatically download podcasts.  iTunes is a popular podcatcher, but is not the only software available for this purpose.
 
-current_file=Current File:
-current_date=Current Date:
+current_file=Current File
+current_date=Current Publish Date/Time
 
 required_prompt=Required items marked with a 
 file_prompt=Choose a file
-date_prompt=Date and Time Created
+date_prompt=Publish Date/Time 
 title_prompt=Title
 change_submit=Save Changes
 del_confirm=Are you sure you want to delete the following podcast?
