Delete page had no title, authentication v0.1, email notification v0.1
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@14664 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
+++ b/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
@@ -36,18 +36,18 @@ file_prompt=Choose a file
 date_prompt=Publish Date/Time 
 title_prompt=Title
 change_submit=Save Changes
-del_confirm=Are you sure you want to delete the following podcast?
+del_confirm=Are you sure you want to delete the following episode?
 
-add_title=Add Podcast
+add_title=Add Episode
 add_directions=Complete the form, then choose the appropriate button at the bottom.
 
 description_prompt=Description
 email_prompt=Email Notification
 
-delete_title=Deleting Podcast...
+delete_title=Deleting Episode...
 delete_submit=Delete
 
-revise_title=Reivse Podcast
+revise_title=Reivse Episode
 revise_directions=Update the form, then choose the appropriate botton at the bottom.
 
 perm_title=Permissions
