--- a/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
+++ b/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
@@ -26,6 +26,8 @@ close_paren=)
 open_paren=(
 spacer_bar= | 
 
+publish_date_format=EEEEEE',' dd MMMMM yyyy hh:mm a z
+
 popup_text=A podcatcher is a computer program used to automatically download podcasts.  iTunes is a popular podcatcher, but is not the only software available for this purpose.
 
 current_file=Current File
@@ -58,8 +60,8 @@ options_directions1=To provide access to you podcasts through a
 options_directions2=choose Display to Public. To restrict access to your podcasts to your site's participants and disable access through a
 options_directions3=choose Display to Site.
 
-podcast_options_public=Display to non-members (publicly viewable)
-podcast_options_site=Display to site
+options_public=Display to non-members (publicly viewable)
+options_site=Display to site
 
 perm_change_confirm=The properties for the Podcasts folder in Resources have been changed.  This folder is no longer publicly viewable.
 
