auth out for now, feed working again
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@14669 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
+++ b/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
@@ -46,10 +46,10 @@ add_directions=Complete the form, then choose the appropriate button at the bott
 description_prompt=Description
 email_prompt=Email Notification
 
-delete_title=Deleting Episode...
+delete_title=Deleting Podcast...
 delete_submit=Delete
 
-revise_title=Reivse Episode
+revise_title=Reivse Podcast
 revise_directions=Update the form, then choose the appropriate botton at the bottom.
 
 perm_title=Permissions
