bring in the changes that didn't make it during the move from contrib
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@14691 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
+++ b/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
@@ -1,6 +1,11 @@
 podcast_home_title=Podcasts
-podcast_home_sub=Subcribe now by copying this address and pasting it into your favorite
+podcast_home_sub=Subscribe now by copying this RSS feed address and pasting it into your favorite
 podcatcher=podcatcher
+
+feed_title=Podcast for
+feed_desc1=This is the podcast for the course
+feed_desc2=. Please check back throughout the semester for updates. 
+feed_copyright=Copyright 2006 The Trustees of Indiana University. All rights reserved.
 
 no_podcasts=There are currently no podcasts at this location.
 
@@ -10,6 +15,7 @@ access=Access
 add=Add
 at=at 
 cancel=Cancel
+colon=:
 delete=Delete
 download=Download
 maint=Maintain
@@ -27,6 +33,10 @@ open_paren=(
 spacer_bar= | 
 
 publish_date_format=EEEEEE',' dd MMMMM yyyy hh:mm a z
+date_picker_format=MM/dd/yyyy hh:mm:ss a
+date_by_hand_format=MM/dd/yyyy hh:mm a
+date_picker_format_string=(Format: MM/DD/YYYY HH:MM AM/PM)
+internal_date_format=yyyyMMddhhmmssSSS
 
 popup_text=A podcatcher is a computer program used to automatically download podcasts.  iTunes is a popular podcatcher, but is not the only software available for this purpose.
 
@@ -34,13 +44,13 @@ current_file=Current File
 current_date=Current Publish Date/Time
 
 required_prompt=Required items marked with a 
-file_prompt=Choose a file
+file_prompt=Choose a file 
 date_prompt=Publish Date/Time 
 title_prompt=Title
 change_submit=Save Changes
-del_confirm=Are you sure you want to delete the following episode?
+file_to_upload=File to Upload
 
-add_title=Add Episode
+add_title=Add Podcast
 add_directions=Complete the form, then choose the appropriate button at the bottom.
 
 description_prompt=Description
@@ -48,42 +58,44 @@ email_prompt=Email Notification
 
 delete_title=Deleting Podcast...
 delete_submit=Delete
+del_confirm=Are you sure you want to delete the following podcast?
 
-revise_title=Reivse Podcast
-revise_directions=Update the form, then choose the appropriate botton at the bottom.
+revise_title=Revise Podcast
+revise_directions=Update the form, then choose the appropriate button at the bottom.
 
 perm_title=Permissions
-perm_directions=Set permissions for Podcasts in worksite
+perm_directions=Set permissions for Podcasts in worksite 
 
 options_title=Options
-options_directions1=To provide access to you podcasts through a
+options_directions1=To provide access to your podcasts through a
 options_directions2=choose Display to Public. To restrict access to your podcasts to your site's participants and disable access through a
 options_directions3=choose Display to Site.
 
 options_public=Display to non-members (publicly viewable)
 options_site=Display to site
 
-perm_change_confirm=The properties for the Podcasts folder in Resources have been changed.  This folder is no longer publicly viewable.
+perm_change_confirm=The properties for the Podcasts folder in Resources have been changed.  This folder is no longer publicly viewable. For non-members to access the Podcast feed for this site, in Resources, select Revise Properties next to the Podcasts folder and check the box next to Display to non-members (publicly viewable).
 
 podcast_perm_change_pt2=For participants to access the Podcast feed for this site, in Resources, select Revise Properties next to the Podcasts folder 
 podcast_perm_change_pt3= and check the box next to Display to non-members (publicly viewable).
 
 no_resource_alert=To use the Podcasts tool, you must first add the Resources tool.
 nofile_alert=Alert: You must choose a file
-nodate_alert=Alert: You must enter a date
+nodate_alert=Alert: You must enter a date and time
 notitle_alert=Alert: You must enter a title
+notitle=You must enter a title
 length_alert=The podcast URL, including the file name, cannot exceed 254 characters. To add this podcast successfully, reduce the length of the file name and try again.
 quota_alert=You have exceeded your quota in Resources.  Delete items and try again.
 permission_alert=You do not have permission to delete the selected file.
-internal_error_alert=An internal error prevented the podcast from being deleted. Please try again.
+internal_error_alert=An internal error prevented your operation from being completed. Please try again.
 id_unused_alert=The ID for the resource does not correspond to a valid resource. Please try again and if this reoccurs, contact support to help resolve.
 id_invalid_alert=The ID for the resource is invalid resource. Please try again and if reoccurs, contact support to help resolve.
 io_alert=There was a problem uploading your file. Please check the pathname or re-select and try again.
 id_used_alert=The ID for the resource is already in use. Please retry.
+invalid_date_alert=You must enter the date in the following format: MM/DD/YYYY HH:MM AM/PM
 
 podfeed_revise_title=Revise Podcast Feed
 podfeed_revise_directions=The title and description of the podcast feed will be available to site participants from within their podcatcher.  Update the form, then choose the appropriate button at the bottom. 
 podfeed_revise_url_caption=RSS feed address
-podfeed_global_title=Podcast for
-podfeed_global_desc1=This is the podcast for the course
-podfeed_global_desc2=. Please subscribe by entering the URL above into your podcatcher. 
+
+option_display_change=The properties for the Podcasts folder in Resources have been changed.  This folder is no longer publicly viewable. For non-members to access the Podcast feed for this site, in Resources, select Revise Properties next to the Podcasts folder and check the box next to 'Display to non-members (publicly viewable).'
