--- a/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
+++ b/podcasts-app/src/bundle/org/sakaiproject/tool/podcasts/bundle/Messages.properties
@@ -68,7 +68,7 @@ perm_directions=Set permissions for Podcasts in worksite
 
 options_title=Options
 options_directions1=To provide access to your podcasts through a
-options_directions2=choose Display to Public. To restrict access to your podcasts to your site's participants and disable access through a
+options_directions2=choose Display to non-members (publicly available). To restrict access to your podcasts to your site's participants and disable access through a
 options_directions3=choose Display to Site.
 
 options_public=Display to non-members (publicly viewable)
