SAK-6958: Put copyright and generator tag strings for feed in Message bundle
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@17384 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages.properties
@@ -99,3 +99,7 @@ podfeed_revise_directions=The title and description of the podcast feed will be 
 podfeed_revise_url_caption=RSS feed address
 
 option_display_change=The properties for the Podcasts folder in Resources have been changed.  This folder is no longer publicly viewable. For non-members to access the Podcast feed for this site, in Resources, select Revise Properties next to the Podcasts folder and check the box next to 'Display to non-members (publicly viewable).'
+
+podfeed_generator=Sakai 2.3 http://www.sakaiproject.org
+podfeed_author=Created by Sakai
+podfeed_copyrighttext=Copyright 2006.
