SAK-6412 SAK-6405 SAK-6403 (some progress on this)
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@18092 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages.properties
@@ -74,7 +74,7 @@ options_directions3=choose Display to Site.
 options_public=Display to non-members (publicly viewable)
 options_site=Display to site
 
-perm_change_confirm=The properties for the Podcasts folder in Resources have been changed.  This folder is no longer publicly viewable. For non-members to access the Podcast feed for this site, in Resources, select Revise Properties next to the Podcasts folder and check the box next to Display to non-members (publicly viewable).
+perm_change_confirm=The permissions for the Podcasts feed have changed. This folder is no longer publicly viewable. For non-participants to access the podcast feed for this site, select the Options link above and select the radio button next to Display to non-members (publicly viewable).
 
 podcast_perm_change_pt2=For participants to access the Podcast feed for this site, in Resources, select Revise Properties next to the Podcasts folder 
 podcast_perm_change_pt3= and check the box next to Display to non-members (publicly viewable).
