SAK-6951 -> check in for Ryan.
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@20080 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages.properties
@@ -3,8 +3,8 @@ podcast_home_sub=Subscribe now by copying this RSS feed address and pasting it i
 podcatcher=podcatcher
 
 feed_title=Podcast for
-feed_desc1=This is the podcast for the course
-feed_desc2=. Please check back throughout the semester for updates. 
+feed_desc1= \ official podcast.
+feed_desc2= \ Please check back throughout the semester for updates. 
 feed_copyright=Copyright 2006 The Trustees of Indiana University. All rights reserved.
 
 no_podcasts=There are currently no podcasts at this location.
