--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages.properties
@@ -74,8 +74,7 @@ options_directions3=choose Display to Site.
 options_public=Display to non-members (publicly viewable)
 options_site=Display to site
 
-podcast_perm_change_pt2=For participants to access the Podcast feed for this site, in Resources, select Revise Properties next to the Podcasts folder 
-podcast_perm_change_pt3= and check the box next to Display to non-members (publicly viewable).
+option_change_confirm=The permissions for the Podcasts feed have changed. This feed is no longer publicly viewable. For non-participants to access the podcast feed for this site, select the Options link above and select the radio button next to Display to non-members (publicly viewable).
 
 no_resource_alert=To use the Podcasts tool, you must first add the Resources tool.
 nofile_alert=Alert: You must choose a file
@@ -95,8 +94,6 @@ invalid_date_alert=You must enter the date in the following format: MM/DD/YYYY H
 podfeed_revise_title=Revise Podcast Feed
 podfeed_revise_directions=The title and description of the podcast feed will be available to site participants from within their podcatcher.  Update the form, then choose the appropriate button at the bottom. 
 podfeed_revise_url_caption=RSS feed address
-
-option_display_change=The properties for the Podcasts folder in Resources have been changed.  This folder is no longer publicly viewable. For non-members to access the Podcast feed for this site, in Resources, select Revise Properties next to the Podcasts folder and check the box next to 'Display to non-members (publicly viewable).'
 
 podfeed_generator=Sakai 2.3 http://www.sakaiproject.org
 podfeed_author=Created by Sakai
