SAK-7545: read perm applied to main page. Now dealing with feed.
SAK-6691: message put in bundle 

git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@20203 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages.properties
@@ -8,6 +8,7 @@ feed_desc2= \ Please check back throughout the semester for updates.
 feed_copyright=Copyright 2006 The Trustees of Indiana University. All rights reserved.
 
 no_podcasts=There are currently no podcasts at this location.
+no_access=You are not authorized to view this tool. Contact your local support center for assistance.
 
 posted_by=Posted by 
 
@@ -76,7 +77,8 @@ options_site=Display to site
 
 option_change_confirm=The permissions for the Podcasts feed have changed. This feed is no longer publicly viewable. For non-participants to access the podcast feed for this site, select the Options link above and select the radio button next to Display to non-members (publicly viewable).
 
-no_resource_alert=To use the Podcasts tool, you must first add the Resources tool.
+no_resource_alert=To use the Podcasts tool, you must first add the 
+no_resource_alert2= tool.
 nofile_alert=Alert: You must choose a file
 nodate_alert=Alert: You must enter a date and time
 notitle_alert=Alert: You must enter a title
