SAK-8793 update dutch translation
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@22908 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_nl.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_nl.properties
@@ -76,9 +76,13 @@ maint = Beheer
 
 new = Toevoegen
 
+no_access = Je bent niet bevoegd om deze functie te gebruiken. Neem contact op met de helpdesk voor ondersteuning.
+
 no_podcasts = Er zijn momenteel geen podcasts op deze locatie.
 
 no_resource_alert = Om de Podcast tool te gebruiken moet eerst de Resources tool worden toegevoegd.
+
+no_resource_alert2 = functie.
 
 nodate_alert = Attentie: de datum en tijd zijn verplicht.
 
@@ -92,7 +96,7 @@ on = op
 
 open_paren = (
 
-option_display_change = De eigenschappen voor de Podcasts folder zijn gewijzigd. De folder is niet langer openbaar toegankelijk. Om niet site deelnemers toegang te geven moeten de toegankelijkheidsinstellingen van de folder worden gewijzigd.
+option_change_confirm = De eigenschappen voor de Podcasts feed zijn gewijzigd. De feed is niet langer openbaar toegankelijk. Om niet site-deelnemers toegang te geven moeten de toegankelijkheidsinstellingen van de feed worden gewijzigd.
 
 options = Opties
 
@@ -108,8 +112,6 @@ options_site = Alleen toegankelijk voor site-deelnemers
 
 options_title = Opties
 
-perm_change_confirm = De eigenschappen voor de Podcasts folder zijn gewijzigd. De folder is niet langer openbaar toegankelijk. Om niet-sitedeelnemers toegang te geven moeten de toegankelijkheidsinstellingen van de folder worden gewijzigd.
-
 perm_directions = Stel de bevoegdheden in voor Podcasts in de worksite
 
 perm_title = Bevoegdheden
@@ -121,10 +123,6 @@ permissions = Bevoegdheden
 podcast_home_sub = Abonneer je op deze podcast door onderstaande feed URL te kopi\u00EBren naar je favoriete
 
 podcast_home_title = Podcasts
-
-podcast_perm_change_pt2 = Wijzig de eigenschappen van de Podcast folder om gebruikers toegang te geven tot de podcast feed van deze site.
-
-podcast_perm_change_pt3 = en selecteer de optie 'Openbaar toegankelijk'.
 
 podcatcher = podcatcher
 
