SAK-6951 - in previous attempt changed description and not title
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@28636 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages.properties
@@ -2,7 +2,7 @@ podcast_home_title=Podcasts
 podcast_home_sub=Subscribe now by copying this RSS feed address and pasting it into your favorite
 podcatcher=podcatcher
 
-feed_title=Podcast for
+feed_title='s official Podcast.
 feed_desc1= \ official podcast.
 feed_desc2= \ Please check back throughout the semester for updates. 
 feed_copyright=Copyright 2006 The Trustees of Indiana University. All rights reserved.
