--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_pt_PT.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_pt_PT.properties
@@ -3,7 +3,7 @@ access=Access
 add=Criar
 add_directions=Complete o formul\u00E1rio e clique no bot\u00E3o apropriado bo fundo da p\u00E1gina.
 add_title=Criar Podcast
-at=em
+at=em 
 cancel=Cancelar
 change_submit=Guardar altera\u00E7\u00F5es
 close_paren=)
@@ -59,7 +59,7 @@ perm_directions=Modificar permiss\u00F5es para a ferramenta Podcasts na \u00E1re
 perm_title=Permiss\u00F5es
 permission_alert=N\u00E3o tem permiss\u00F5es para remover o ficheiro seleccionado.
 permissions=Permiss\u00F5es
-podcast_home_sub=Subscreva agora copiando o endere\u00E7o RSS e colando no seu 
+podcast_home_sub=Para subscrever copie o endere\u00E7o RSS e coloque-o no seu 
 podcast_home_title=Podcasts
 podcatcher=leitor de Podcasts
 podfeed_author=Criado por Sakai
@@ -69,7 +69,7 @@ podfeed_revise_directions=O t\u00EDtulo e a descri\u00E7\u00E3o da subscri\u00E7
 podfeed_revise_title=Editar Subscri\u00E7\u00E3o Podcast
 podfeed_revise_url_caption=Endere\u00E7o do Podcast
 popup_text=Um leitor de Podcasts \u00E9 um programa de computador utilizado para descarregar autom\u00E1ticamente Podcasts. O iTunes \u00E9 um leitor popular, mas n\u00E3o \u00E9 o \u00FAnico programa dispon\u00EDvel para o efeito.
-posted_by=Publicado por
+posted_by=Publicado por 
 publish_date_format=EEEEEE',' dd MMMMM yyyy hh\:mm a z
 quota_alert=Excedeu a sua quota nos Recursos. Remova alguns itens e tente novamente.
 read=Ler
