--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_ca.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_ca.properties
@@ -19,7 +19,7 @@ podcatcher=podcatcher
 
 feed_title=Podcast per a
 feed_desc1= \ podcast oficial.
-feed_desc2= \ Si us plau comproveu les actualitzacions per a tot el semestre. 
+feed_desc2= \ Comproveu les actualitzacions per a tot el semestre. 
 feed_copyright=Copyright 2006 The Sakai Foundation. All rights reserved.
 
 no_podcasts=Actualment no hi ha podcasts en aquesta ubicació.
@@ -101,11 +101,11 @@ notitle=Heu de introduir un títol
 length_alert=La URL del podcast, inclòs el nom de fitxer, no pot excedir de 254 caràcters. Per afegir aquest podcast correctament, reduïu la mida del nom de fitxer i proveu-ho de nou.
 quota_alert=Heu excedit la vostra quota de Recursos. Suprimiu elements i proveu-ho de nou.
 permission_alert=No teniu permisos per a suprimir el fitxer seleccionat.
-internal_error_alert=Un error intern no ha  permés finalitzar la vostra operació. Si us plau, proveu-ho de nou.
-id_unused_alert=L'ID del recurs no correspon a cap recurs vàlid. Si us plau, proveu-ho de nou i si es repeteix, contacteu amb el punt de suport per a solucionar-ho.
-id_invalid_alert=L'ID del recurs és d'un recurs invàlid. Si us plau, proveu-ho de nou i si es repeteix, contacteu amb el punt de suport per a solucionar-ho.
-io_alert=Hi havia un problema pujant el vostre fitxer. Si us plau, comproveu el camí o torneu a seleccionar-lo i proveu-ho de nou. 
-id_used_alert=L'ID del recurs ja existeix. Si us plau, reintenteu-ho amb un altre.
+internal_error_alert=Un error intern no ha  permés finalitzar la vostra operació. Proveu-ho de nou.
+id_unused_alert=L'ID del recurs no correspon a cap recurs vàlid. Proveu-ho de nou i si es repeteix, contacteu amb el punt de suport per a solucionar-ho.
+id_invalid_alert=L'ID del recurs és d'un recurs invàlid. Proveu-ho de nou i si es repeteix, contacteu amb el punt de suport per a solucionar-ho.
+io_alert=Hi havia un problema pujant el vostre fitxer. Comproveu el camí o torneu a seleccionar-lo i proveu-ho de nou. 
+id_used_alert=L'ID del recurs ja existeix. Reintenteu-ho amb un altre.
 invalid_date_alert=Heu d'introduir una data amb el següent format: MM/DD/YYYY HH:MM AM/PM
 
 podfeed_revise_title=Reviseu el Generador de Podcast
