SAK-18352 - String not internationalized in Podcasts.
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@76330 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages.properties
@@ -66,6 +66,7 @@ revise_directions=Update the form, then choose the appropriate button at the bot
 
 perm_title=Permissions
 perm_directions=Set permissions for Podcasts in worksite 
+permission_directions=Set permissions for Podcasts folder in worksite
 
 options_title=Options
 options_directions1=To provide access to your podcasts through a
