SAK-18351 - Duplicate ResourceLoader bundle initialization code in podcasts-app/src/java/org/sakaiproject/tool/podcasts/podHomeBean.java. This also fixed SAK-14647.
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@76386 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages.properties
@@ -78,8 +78,7 @@ options_site=Display to site
 
 option_change_confirm=The permissions for the Podcasts feed have changed. This feed is no longer publicly viewable. For non-participants to access the podcast feed for this site, select the Options link above and select the radio button next to Display to non-members (publicly viewable).
 
-no_resource_alert=To use the Podcasts tool, you must first add the 
-no_resource_alert2= tool.
+no_resource_alert=To use the Podcasts tool, you must first add the {0} tool.
 nofile_alert=Alert: You must choose a file
 nodate_alert=Alert: You must enter a date and time
 notitle_alert=Alert: You must enter a title
